test/errors/type/collections/set/__bxor2.yasl
echo collections.set().__bxor(1, collections.set())
